--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <title>Interactive Developer Bio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'><path d='M9 0h6v4H9zm-3 6h12v4H6zm0 6h12v4H6zm0 6h12v4H6zm0 6h12v4H6zm-3-2h18v4H3zm0-6h18v4H3zm0-6h18v4H3z'/></svg>">
     <style>
         body {
+            font-family: "Century Gothic", sans-serif;
             background-color: #f0f0f0;
+            transition: background-color 0.3s, color 0.3s;
         }
         .menu {
             position: fixed;
             left: 0;
-            top: 0;
-            height: 100%;
+            top: 50%;
+            transform: translateY(-50%);
+            height: auto;
             width: 250px;
             background-color: #333;
             color: white;
@@ -29,34 +33,6 @@
         .menu a:hover {
             background-color: #575757;
         }
-        .footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
-            padding: 10px;
-            background-color: #333;
-            color: white;
-        }
-        .quote-section {
-            position: absolute;
-            bottom: 10px;
-            left: 10px;
-            font-size: 14px;
-            color: white;
-        }
-        .quote-btn {
-            font-size: 12px;
-            color: white;
-            background-color: #444;
-            border: none;
-            padding: 5px;
-            margin-top: 10px;
-            cursor: pointer;
-        }
-        .quote-btn:hover {
-            background-color: #666;
-        }
         .content {
             margin-left: 270px;
             padding: 20px;
@@ -69,6 +45,84 @@
         }
         .image-container img {
             max-width: 300px;
+        }
+        .quote-section {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 14px;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.6);
+            border-radius: 5px;
+            width: 90%;
+        }
+        .quote-btn {
+            font-size: 12px;
+            color: white;
+            background-color: #444;
+            border: none;
+            padding: 5px;
+            cursor: pointer;
+        }
+        .quote-btn:hover {
+            background-color: #666;
+        }
+        .footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+        }
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 34px;
+            height: 20px;
+            margin-right: 10px;
+        }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 34px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 12px;
+            width: 12px;
+            border-radius: 50%;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: .4s;
+        }
+
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+
+        input:checked + .slider:before {
+            transform: translateX(14px);
         }
     </style>
 </head>
@@ -91,12 +145,12 @@
     <div class="bio-text">
         <h3>Interactive Developer Santiago</h3>
         <p>I am an interactive developer working on computer vision projects, with certifications in C++, Swift, and Objective-C.</p>
-        <p>Contact me for projects at <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        <p>Contact me for projects at <a href="mailto:sakayama234234@icloud.com">sakayama234234@icloud.com</a></p>
     </div>
 
-    <!-- Color Scheme and Typography Toggles -->
-    <div class="row" style="position: fixed; bottom: 50px; left: 15px; background-color: black; padding: 10px;">
-        <div class="col">
+    <!-- Color Scheme Toggles -->
+    <div style="position: fixed; bottom: 50px; left: 15px; background-color: black; padding: 10px;">
+        <div>
             <h6 style="color: white;">Color Scheme</h6>
             <label class="switch">
                 <input type="checkbox" id="solarized">
@@ -141,13 +195,15 @@
 
 <!-- Footer Section -->
 <div class="footer">
-    <div class="quote-section" id="quote-section"></div>
-    <button class="quote-btn" onclick="getNewQuote()">Get another quote</button>
     <p>All rights reserved ©</p>
 </div>
 
-<script>
+<!-- Quotes Section -->
+<div class="quote-section" id="quote-section"></div>
+<button class="quote-btn" onclick="getNewQuote()">Get another quote</button>
 
+<script>
+// Array of quotes (add more quotes as needed)
 const quotes = [
     { quote: "It is not our abilities that show what we truly are… it is our choices.", author: "J.K. Rowling, Harry Potter and the Chamber of Secrets" },
     { quote: "In three words I can sum up everything I've learned about life: it goes on.", author: "Robert Frost" },
@@ -247,23 +303,14 @@ function applyColorScheme() {
     }
 }
 
-document.querySelectorAll('input[type="checkbox"]').forEach(input => {
+// Apply color scheme changes when toggled
+document.querySelectorAll('.switch input').forEach(input => {
     input.addEventListener('change', applyColorScheme);
 });
-
-// Apply default color scheme
-document.getElementById('minimalWhite').checked = true;
-applyColorScheme();
-
 </script>
 
 </body>
 </html>
-
-
-
-
-
 
 
 
